2005-10-26 Patrick Galbraith <patg@mysql.com> (3.0002_4)
  * Added Guy Harrison's patch for multiple result sets
  * Fixed bugs with declarations in middle of functions
  * Updated documentation

2005-09-28 Patrick Galbraith <patg@mysql.com> (3.0002_3)
  * Added code to  mysql_st_internal_execute that determines whether the
    SV *h is a sth or dbh, and then imports imp_dbh appropriately

2005-09-26 Patrick Galbraith <patg@mysql.com> (3.0002_2)
  * Fixed bug in dbd_st_execute where imp_sth was being 
    imported unecessarily, when only imp_dbh is needed. This caused a 
    core dump in some cases. Thanks to Andy Maas at Proofpoint for his 
    execellent detective work!
  * Small changes to Makefile.PL to make sure --ps-protocol works as
    advertised.
  * Updated install.html with current info about prepared statements and FC
    RPM/YUM packages.

2005-08-04 Patrick Galbraith <patg@mysql.com> (3.0002_1)
  * Prepared statement support is default now. To turn it off
    a parameter 'mysql_emulated_prepare' must be turned ON
  * Better error handling in mysql_internal_execute_ps (renamed
    from mysql_internal_execute41). Also free the result if error -
    that could have been a memory bug
  * Added a simply 'do' to t/35prepare.test to see if you can turn
    off prepared statements in the 'do' call.
  * Cleaned up a LOT of cruft. Added more 'caveat' blurbage to old
    Mysql.pm lib, which will not work with prepared statements
  
2005-07-06 Parick Galbraith <patg@mysql.com> (3.0001_3)
  * Fix to ensure MYSQL_BIND is only defined when mysql
    client version is >= 4.1.3. Thanks to Tom Parkison

2005-07-06 Patrick Galbraith <patg@mysql.com> (3.0001_2)
  * Fixed runtime bug (when inserting or updating quotes or double quotes)
    (Thanks to Brad Choate, Six Apart Ltd.)

2005-07-04 Patrick Galbraith <patg@mysql.com> (3.0001_1)
  * Changed uint argument in safe_sv_fetch to int due to 
    uint not being available on windows unless you include